# kuka-rviz-simulation

./: .travis.yml  README.md  bimanual_simulation.txt  catkin.options  dependencies.rosinstall
iai_stuff/iai_common_msgs/: README.md
iai_stuff/iai_common_msgs/iai_common_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_stuff/iai_common_msgs/iai_control_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_stuff/iai_common_msgs/iai_control_msgs/action/: PTU.action
iai_stuff/iai_common_msgs/iai_control_msgs/msg/: CartGoal.msg  CartState.msg  JointLimits.msg  MultiJointVelocityCommand.msg  MultiJointVelocityImpedanceCommand.msg  MultiJointVelocityImpedanceState.msg
iai_stuff/iai_common_msgs/iai_kinematics_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
iai_stuff/iai_common_msgs/iai_kinematics_msgs/msg/: KinematicSolverInfo.msg  PositionIKRequest.msg  RobotState.msg
iai_stuff/iai_common_msgs/iai_kinematics_msgs/srv/: GetKinematicSolverInfo.srv  GetPositionFK.srv  GetPositionIK.srv  GetWeightedIK.srv
iai_stuff/iai_control_pkgs/: README.md
iai_stuff/iai_control_pkgs/iai_control_pkgs/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/iai_control_utils/: CMakeLists.txt  package.xml  setup.py
iai_stuff/iai_control_pkgs/iai_control_utils/scripts/: joint_p_ctrl.py  separate_joint_states.py
iai_stuff/iai_control_pkgs/iai_control_utils/src/iai_control_utils/: jcontroller.py
iai_stuff/iai_control_pkgs/iai_hardware_interface/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/iai_hardware_interface/include/iai_hardware_interface/: impedance_joint_interface.h
iai_stuff/iai_control_pkgs/iai_robot_mechanism_controllers/: CMakeLists.txt  controller_plugins.xml  package.xml
iai_stuff/iai_control_pkgs/iai_robot_mechanism_controllers/include/iai_robot_mechanism_controllers/: multi_joint_velocity_controller.h  multi_joint_velocity_impedance_controller.h  rosie_odometry.h
iai_stuff/iai_control_pkgs/iai_robot_mechanism_controllers/src/: multi_joint_velocity_controller.cpp  multi_joint_velocity_impedance_controller.cpp  rosie_odometry.cpp
iai_stuff/iai_control_pkgs/iai_ros_controllers/: CMakeLists.txt  package.xml  ros_control_plugins.xml
iai_stuff/iai_control_pkgs/iai_ros_controllers/include/iai_ros_controllers/: MultiJointVelocityImpedanceController.h  Watchdog.h
iai_stuff/iai_control_pkgs/iai_ros_controllers/scripts/: cmd_arm_vel_imp_array.py  cmd_arm_vel_imp_single.py  test_single_joint_tracking_vel_imp.py
iai_stuff/iai_control_pkgs/iai_ros_controllers/src/iai_ros_controllers/: MultiJointVelocityImpedanceController.cpp
iai_stuff/iai_control_pkgs/iai_tf_relay/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/iai_tf_relay/launch/: tf_relay.launch
iai_stuff/iai_control_pkgs/iai_tf_relay/src/iai_tf_relay/: tf_relay.cpp
iai_stuff/iai_control_pkgs/iai_velocity_controller_demux/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/iai_velocity_controller_demux/launch/: pr2_arm_velocity_controller_demux.launch
iai_stuff/iai_control_pkgs/iai_velocity_controller_demux/src/iai_velocity_controller_demux/: iai_pr2_velocity_controller_demux.cpp
iai_stuff/iai_control_pkgs/kdl_arm_kinematics/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/kdl_arm_kinematics/launch/: lwr.launch
iai_stuff/iai_control_pkgs/kdl_arm_kinematics/src/: arm_kinematics.cpp
iai_stuff/iai_control_pkgs/loopback_controller_manager/: CMakeLists.txt  loopback_controller_manager.cpp  odometry_simulation.cpp  package.xml
iai_stuff/iai_control_pkgs/loopback_controller_manager_examples/: CMakeLists.txt  package.xml
iai_stuff/iai_control_pkgs/loopback_controller_manager_examples/config/: pr2_grippers_joint_velocity_controllers.yaml  pr2_start_config.yaml
iai_stuff/iai_control_pkgs/loopback_controller_manager_examples/launch/: load_pr2_joint_effort_controllers.launch  load_pr2_joint_position_controllers.launch  load_pr2_joint_velocity_controllers.launch  load_pr2_standard_arm_action_controllers.launch  pr2_all_controllers_simulation.launch  pr2_all_controllers_simulation_dynamic_state.launch  pr2_cartesian_twist_controllers.launch  pr2_loopback_no_controllers.launch  pr2_loopback_no_controllers_dynamic_state.launch  pr2_velocity_resolved_controllers.launch  start_pr2_head_action_controller.launch
iai_stuff/iai_control_pkgs/urdf_management/: CMakeLists.txt  README.md  package.xml  urdf-management.asd
iai_stuff/iai_control_pkgs/urdf_management/asdf/: urdf-management.asd
iai_stuff/iai_control_pkgs/urdf_management/scripts/: urdf_management_service  urdf_management_service.lisp
iai_stuff/iai_control_pkgs/urdf_management/src/: package.lisp  service.lisp
iai_stuff/iai_control_pkgs/urdf_management_tutorial/: CMakeLists.txt  README.md  package.xml  urdf-management-tutorial.asd
iai_stuff/iai_control_pkgs/urdf_management_tutorial/meshes/kitchen/hand-tools/: edeka_spatula1.dae
iai_stuff/iai_control_pkgs/urdf_management_tutorial/rosinstall/: sample.rosinstall
iai_stuff/iai_control_pkgs/urdf_management_tutorial/scripts/: add_spatula  add_spatula.lisp  move_arm  move_arm.lisp  remove_left_gripper  remove_left_gripper.lisp  remove_spatula  remove_spatula.lisp
iai_stuff/iai_control_pkgs/urdf_management_tutorial/src/: package.lisp  test-calls.lisp  test-movements.lisp
kuka_lwr_bringup/: CMakeLists.txt  Kinect-LWR-Calibration-Steps  package.xml
kuka_lwr_bringup/config/: bimanual_lwr_sim_pos_controllers.yaml  bimanual_lwr_sim_vel_controllers.yaml  bimanual_lwr_start_config.yaml  bimanual_lwr_start_config_peeling.yaml  lwr_sim_pos_controllers.yaml  lwr_sim_vel_controllers.yaml  lwr_start_config.yaml  lwr_start_config_roll.yaml  multiarm_lwr_sim_pos_controllers.yaml  multiarm_lwr_sim_vel_controllers.yaml  (+1 more)
kuka_lwr_description/: CMakeLists.txt  package.xml
lasa_to_iai_parser/: CMakeLists.txt  package.xml  setup.py
lasa_to_iai_parser/launch/: lasa_to_iai_parser.launch
lasa_to_iai_parser/scripts/: lasa_bimanual_to_iai.py  lasa_multiarm_to_iai.py  lasa_to_iai.py  seperate_to_joint.py
set_joint_position_plugin/: CMakeLists.txt  package.xml
(+119 files in other folders)
