<?xml version="1.0"?>
<package>
  <name>lasa_to_iai_parser</name>
  <version>0.1.0</version>
  <description>
    Converting kuka_fri_bridge/JointStateImpedance Message type to from std_msgs/Float32MultiArray
  </description>
  
  <maintainer email="nadia@todo.todo">nadia</maintainer>

  <license>LGPLv3+</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kuka_fri_bridge</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kuka_fri_bridge</run_depend>


</package>
