<?xml version="1.0"?>
<package>
  <name>iai_control_msgs</name>
  <version>0.0.5</version>
  <description>
    Message defintions to talk to the motion controllers developed in
    the IAI institute, University Bremen, Germany.
  </description>

  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <author email="ingo.kresse@gmail.com">Ingo Kresse</author>
  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>

</package>
