<package>
  <name>iai_tf_relay</name>
  <version>0.0.0</version>
  <description>
     A relay to broadcast transforms to TF.
  </description>

  <author email="georg.bartels@cs.uni-bremen.de">Georg Bartels</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
</package>
