<package>
  <name>kdl_arm_kinematics</name>
  <version>0.0.0</version>
  <description>
    A generic package for computing Arm Kinematics based on KDL.

    A generic package for computing both forward and backward kinematics for arms.
    Developed as an alternative to pr2_arm_kinematics for people not using the PR2.

    This package is a fork of urdf_tools/arm_kinematics. It adds
    mechanisms to configure some of the KDL solver parameters and thus
    allows for greater flexibility.
  </description>

  <author>David Lu!!, Lorenz Moesenlechner</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>iai_kinematics_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>iai_kinematics_msgs</run_depend>
</package>
