<?xml version="1.0"?>
<package>
  <name>urdf_management</name>
  <version>0.1.0</version>
  <description>
    "Manages the joints and links in the urdf."
  </description>

  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>iai_urdf_msgs</build_depend>
  <build_depend>message_runtime</build_depend>

  <run_depend>roslisp</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>iai_urdf_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
