<?xml version="1.0"?>
<package>
  <name>urdf_management_tutorial</name>
  <version>0.1.0</version>
  <description>
    "Tutorial for the urdf_management"
  </description>

  <author email="jannikbu@cs.uni-bremen.de">Jannik Buckelo</author>
  <maintainer email="georg.bartels@cs.uni-bremen.de">Georg Bartels</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslisp</build_depend>
  <build_depend>urdf_management</build_depend>
  <build_depend>cl_urdf</build_depend>
  <build_depend>actionlib_lisp</build_depend>
  <build_depend>iai_urdf_msgs</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>loopback_controller_manager</build_depend>
  <build_depend>dynamic_robot_state_publisher</build_depend>

  <run_depend>roslisp</run_depend>
  <run_depend>cl_urdf</run_depend>
  <run_depend>actionlib_lisp</run_depend>
  <run_depend>urdf_management</run_depend>
  <run_depend>iai_urdf_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>loopback_controller_manager</run_depend>
  <run_depend>dynamic_robot_state_publisher</run_depend>

</package>
